pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-manual
  labels:
    name: kubia
spec:
  containers:
   - name: myapp
     image: nginx
     ports:
      - containerPort: 8080
        protocol: TCP
