pod_file.yaml
apiVersion: v1
#kind: apiVersion: v1
kind: Pod
metadata:
  name: myappfortune
  labels:
    app:  fortune
spec:
  containers:
  - name: html-generator
    image: luksa/fortune
    volumeMounts:
      - name: html
        mountPath: /vat/htdocs 
  - name: web-server
    image: nginx:alpine
    volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html     
    ports:
      - containerPort: 80
        protocol: TCP
    volumes:
      - name: html
        emptyDir: {}
