pod_mogno.yaml
apiVersion: v1
#kind: apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels:
    name: kubia
spec:
  containers:
  - name: mongodb
    image: mongo
    volumeMounts:
      - name: mongodb-data
        mountPath: /data/db
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 27017
        protocol: TCP
  volumes:
    - name: mongodb-data
      persistentVolumeClaim:
        claimName: mongodb-pvc
