statefulset.yaml
apiVersion: apps/v1
#kind: apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubia
spec:
  selector:
    matchLabels:
      app: kubia_st
  serviceName: headless
  replicas: 2
  template:
    metadata:
      labels:
        app: kubia_st
    spec:
      containers:
      - name: kubia_st
        image: luksa/kubia-pet
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /var/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Mi
