headless.yaml
apiVersion: v1
#kind: apiVersion: v1
kind: Service
metadata:
  name: headless
spec:
  clusterIP: None
  selector:
    app: kubiast
  ports:
  - port: 80
    targetPort: 8080
