miteshlb.yaml
#this file enables external clients to connect to nginx
apiVersion: v1
kind: Service
metadata:
  name: miteshlb
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
