miteshnodep.yaml
#this file enables external clients to connect to nginx
apiVersion: v1
kind: Service
metadata:
  name: miteshnp
spec:
  type: NodePort
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
