miteshsvc.yaml
#this file is to create service for the running pofds
apiVersion: v1
kind: Service
metadata:
  name: miteshsvc
spec:
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
