ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: /mit
        backend:
          serviceName: miteshnp
          servicePort: 80
      - path: /ban
        backend:
          serviceName: miteshnp1
          servicePort: 80
